syntax = "proto3";

package api.auth.v1;

import "api/auth/v1/messages.proto";

option go_package = "github.com/go-chat/auth/pkg/api/v1;authv1";

// AuthService handles user authentication and JWT token management
service AuthService {
  // Register creates a new user account
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // Login authenticates a user and returns JWT tokens
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // Refresh renews the access token using a refresh token
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  
  // GetPublicKeys returns public keys for JWT validation
  rpc GetPublicKeys(GetPublicKeysRequest) returns (GetPublicKeysResponse);
}

